# paste

./: .gitignore  .gitmodules  Cargo.toml  Dockerfile  Makefile.toml  README.md  config.toml
.github/workflows/: docker-publish.yml
src/: config.rs  db.rs  main.rs  simple.rs  util.rs
src/page/: 404.html  code.html  get.html  image.html  index.html  one_half_light.css  too_large.html  wrong_type.html
templates/: 404.html  base.html  code.html  get.html  github_dark.css  github_light.css  image.html  one_half_dark.css  style.css  too_large.html  upload.html  video.html  wrong_type.html
