[package]
name = "pastemp"
version = "0.4.5"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-multipart = "0.6.1"
actix-utils = "3.0.1"
actix-web = "4.5.1"
actix-web-lab = "0.19.2"
anyhow = "1.0.80"
askama = { version = "0.12.1", features = ["with-actix-web", "serde-json"] }
askama_actix = "0.14.0"
async-trait = "0.1.77"
bonsaidb = { version = "0.5", features = ["local-full", "files", "async"] }
chrono = { version = "0.4.34", features = ["serde"] }
derive_more = "0.99.17"
env_logger = "0.10.2"
futures = "0.3.30"
futures-util = "0.3.30"
include_dir = { version = "0.7.3", features = ["glob"] }
log = "0.4.20"
mime_guess = "2.0.4"
rand = "0.8.5"
serde = "1.0.197"
serde_with = { version = "3.6.1", features = ["chrono"] }
syntect = "5.2.0"
thiserror = "1.0.57"
tokio = { version = "1.36.0", features = ["full"] }
url = { version = "2.5.0", features = ["serde"] }

[dependencies.figment]
version = "0.10.14"
features = ["toml", "env"]
