[package]
name = "pastemp"
version = "0.4.11"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-multipart = "0.7.2"
actix-utils = "3.0.1"
actix-web = "4.8.0"
actix-web-lab = "0.20.2"
anyhow = "1.0.86"
askama = { version = "0.12.1", features = ["with-actix-web", "serde-json"] }
askama_actix = "0.14.0"
async-trait = "0.1.81"
bonsaidb = { version = "0.5", features = ["local-full", "files", "async"] }
chrono = { version = "0.4.38", features = ["serde"] }
derive_more = "0.99.18"
env_logger = "0.11.3"
futures = "0.3.30"
futures-util = "0.3.30"
include_dir = { version = "0.7.4", features = ["glob"] }
log = "0.4.22"
mime_guess = "2.0.5"
rand = "0.8.5"
serde = "1.0.204"
serde_with = { version = "3.8.3", features = ["chrono"] }
syntect = "5.2.0"
thiserror = "1.0.61"
tokio = { version = "1.38.0", features = ["full"] }
url = { version = "2.5.2", features = ["serde"] }

[dependencies.figment]
version = "0.10.19"
features = ["toml", "env"]
